--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@testing-library/webdriverio": "^3.2.1",
+        "@wdio/allure-reporter": "^8.24.0",
         "@wdio/cli": "^8.23.4",
         "@wdio/local-runner": "^8.23.4",
         "@wdio/mocha-framework": "^8.23.1",
@@ -10,6 +11,10 @@
         "wdio-wait-for": "^3.0.9"
     },
     "scripts": {
-        "wdio": "wdio run wdio.conf.ts"
+        "wdio": "wdio run wdio.conf.ts",
+        "open-report": "npx allure generate --clean allure-results && npx allure open"
+    },
+    "dependencies": {
+        "allure-commandline": "^2.24.1"
     }
 }
