--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@testing-library/webdriverio": "^3.2.1",
         "@wdio/allure-reporter": "^8.24.0",
         "@wdio/cli": "^8.23.4",
+        "@wdio/dot-reporter": "^8.24.0",
         "@wdio/local-runner": "^8.23.4",
         "@wdio/mocha-framework": "^8.23.1",
         "@wdio/spec-reporter": "^8.23.1",
